# grpc-simple-check

./: CMakeLists.txt  ClientMain.cpp  HelloClient.cpp  HelloClient.h  HelloService.cpp  HelloService.h  ServiceMain.cpp
proto/: KeepAliveService.proto
